Fix: header links gap

--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,6 +1,6 @@
 .header__lang-link {
     padding: 0;
-    margin: 0 0 0 18px;
+    margin: 0;
     font-size: 24px;
     font-weight: normal;
     line-height: 1.17;
