--- a/blocks/header/__links/header__links.css
+++ b/blocks/header/__links/header__links.css
@@ -1,5 +1,6 @@
 .header__links {
     display: flex;
+    gap: 18px;
     padding: 0;
     margin: 18px 0 0 0;
     list-style: none;
